manifests/longhorn/vitrual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  hosts:
    - "longhorn.xplaceinmyheart.ru"
  gateways:
    - longhorn
  http:
    - match:
        - port: 80
      redirect:
        scheme: https
        port: 443
    - match:
        - port: 443
      route:
        - destination:
            host: longhorn-frontend.longhorn-system.svc.cluster.local
            port:
              number: 80
